refactor: make java 11 compatible